Fixed stage and unstage selected, fixed delete for files with spaces, fixed overlapping card layouts

--- a/src/app/components/diff-viewer/diff-viewer.component.scss
+++ b/src/app/components/diff-viewer/diff-viewer.component.scss
@@ -117,7 +117,7 @@ pre code {
 }
 
 .tag-container {
-  margin: -.5em;
+  margin: -.5em 0;
   height: 2.8em;
 }
 
