--- a/src/app/components/layout-card/layout-card.component.scss
+++ b/src/app/components/layout-card/layout-card.component.scss
@@ -1,11 +1,25 @@
 .repo-section-container {
-  //max-height: 30vh;
   overflow: auto;
 }
 
 .card {
   margin: 0;
   font-size: .9em;
+
+  &.expanded {
+    min-height: 10em;
+  }
+}
+
+:host {
+  &:not(.min-height) {
+    min-height: 10em;
+  }
+
+  &.min-height {
+    min-height: 3.5em;
+    flex-shrink: 0;
+  }
 }
 
 .td, .th {
